--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
-  background-image: url(Projeto/margaridas.jpeg);
+  background-image: url(margaridas.jpeg);
   font-family: "Lato", sans-serif}
 .mySlides {display: none}
 
@@ -42,13 +42,13 @@ body {
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="Projeto/6.jpg" style="width:500" height="500">
+    <img src="6.jpg" style="width:500" height="500">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     </div>
   </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="Projeto/1.jpg" style="width:500" height="500">
+    <img src="1.jpg" style="width:500" height="500">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     </div>
   </div>
@@ -69,15 +69,15 @@ body {
         <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Toda dama se amarra num vagabundo</p>
-        <img src="Projeto/13.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="13.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
         <p>O inicio</p>
-        <a href="https://open.spotify.com/playlist/37i9dQZF1EJySNxrc004pb"><img src="Projeto/12.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <a href="https://open.spotify.com/playlist/37i9dQZF1EJySNxrc004pb"><img src="12.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
         <p>O vagabundo de uma bela dama</p>
-        <img src="Projeto/14.jpg" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="14.jpg" class="w3-round" alt="Random Name" style="width:60%">
       </div>
     </div>
   </div>
@@ -85,7 +85,7 @@ body {
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="Projeto/8.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+          <img src="8.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>O Vagabundo</b></p>
             <p class="w3-opacity"> 31/10/2004</p>
@@ -99,7 +99,7 @@ body {
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="Projeto/5.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="5.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>O Casal</b></p>
             <p class="w3-opacity">segredo 🤫 </p>
@@ -107,7 +107,7 @@ body {
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="Projeto/9.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <img src="9.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">>
             <p><b>A Dama</b></p>
             <p class="w3-opacity">20/10/2004</p>
@@ -133,7 +133,7 @@ body {
 </div>
   <div class="video" style="text-align: center; width: 500; height: 500;">
     <video controls poster="Projeto/margaridas.jpeg">
-      <source src="Projeto/10.mp4" type="video/mp4">
+      <source src="10.mp4" type="video/mp4">
     </video>
   </div>
 
