--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
       </div>
       <div class="w3-third">
         <p>O inicio</p>
-        <a href="https://open.spotify.com/playlist/37i9dQZF1EJySNxrc004pb"><img src="12.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+       <div> <a href="https://open.spotify.com/playlist/37i9dQZF1EJySNxrc004pb"><img src="12.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">v</div>
       </div>
       <div class="w3-third">
         <p>O vagabundo de uma bela dama</p>
