--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <style>
 body {
   background-image: url(margaridas.jpeg);
+  background-position: 30% 45%;
+  background-size: cover;
   font-family: "Lato", sans-serif}
 .mySlides {display: none}
 
